# valo-tui

./: .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
cmd/valo-fetcher/: main.go  migrate_test.go  series_contract_test.go
cmd/valo-seed/: main.go
cmd/valo-tui/: main.go
cmd/valo-tui-ssh/: main.go
connect/: README.md  install.ps1  install.sh
deploy/: README.md  valo-fetcher.service  valo-tui-ssh.service
internal/app/: app.go  app_test.go
internal/data/: bracket.go  cache.go  cache_test.go  models.go  roster.go  roster_test.go  series.go  standings.go
internal/screens/: about.go  brackets.go  event_overview.go  events.go  figlet.go  fixtures.go  global_live.go  home.go  match_detail.go  messages.go  results.go  roster_detail.go  splash.go  standings.go  style.go  teams.go
internal/styles/: bars.go  icons.go  theme.go
internal/vlr/: client.go  client_test.go  event_matches.go  event_matches_test.go  events.go  events_test.go  matches.go  models.go  parse.go  parse_test.go  series.go  series_test.go  team.go  team_test.go  version.go
internal/widgets/: matchline_test.go  table.go  widgets.go
proxmox/: README.md  cloudflare.sh  ct-setup.sh  install.sh  uninstall.sh  update.sh  valo-tui.sh
scripts/: check.sh  shots.py
serve/: ssh.py  web.py
valo_tui/: __init__.py  __main__.py  app.py  config.py  styles.tcss
valo_tui/data/: bracket.py  cache.py  models.py  serialize.py  standings.py
valtui/: __init__.py  __main__.py  app.py  config.py  styles.tcss
worker/: fetcher.py
(+26 files in other folders)
