[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valo-tui"
version = "0.1.0"
description = "valo-tui · Valorant esports in your terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.0",
    "vlrdevapi>=1.6",
]

[project.optional-dependencies]
serve = [
    "textual-serve>=1.1",
    "asyncssh>=2.14",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
valo-tui = "valo_tui.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["valo_tui"]
